[tool.poetry]
name = "password-manager"
version = "0.1.0"
description = ""
authors = ["Emre Dinçer <furkanemredincer@gmail.com>"]
readme = "README.md"
packages = [{include = "password_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
start = "password_manager:main" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
